--- a/resume/index.html
+++ b/resume/index.html
@@ -1397,7 +1397,7 @@ pre[class*="language-"] {
 <h2 class="setext" id="skills-and-tool">Skills and Tool</h2>
 <ul>
 <li>C, C# .NET, Python, QT, Matlab, STM32Cube, GNU Make, RTL Verilog    </li>
-<li>Keil MDK-ARM/C51, Microsoft Visual Studio, Renesas CS+, Intel (Altera) Quartus    </li>
+<li>Keil MDK-ARM/C51, Microsoft Visual Studio, Renesas CS+, Intel (Altera) Quartus Prime    </li>
 <li>Logic Analyzer, Oscilloscope, Vectorscope    </li>
 </ul>
 <h2 class="setext" id="ics">ICs</h2>
