--- a/resume/index.html
+++ b/resume/index.html
@@ -1348,9 +1348,9 @@ pre[class*="language-"] {
 </li>
 <li><p>Miscellaneous</p>
 <ul>
-<li>CYUSB3014 (Cypress Semi, USB Controller, ThreadX, GNU ARM):<br>修改GPIF設定, 接收YUV422 16bit/8bit影像資料, 加入HID和UVC Extension Unit (XU)控制I2C/SPI, 電腦透過USB存取I2C/SPI裝置和擷取影像輸入(DirectShow or V4L2)    </li>
+<li>CYUSB3014 (Cypress Semi, USB Controller, ThreadX, GNU ARM):<br>修改GPIF設定, 接收YUV422 16bit/8bit影像資料, 加入HID和UVC Extension Unit (XU)控制I2C/SPI, 電腦透過USB存取I2C/SPI裝置和擷取影像輸入  </li>
 <li>MDIN340/325A/270 (Macro Image Tech, Video Display Processor, MDK-ARM):<br>從LM3S1607移植到Renesas MCU (RL78/G13), 加入OSD顯示, 修改韌體流程    </li>
-<li>EJ511 (eEver Tech, USB Controller, Keil PK51):<br>修改韌體支援MJPG/YUY2各種解析度組合,修改I2C控制外部裝置流程和客製化設定</li>
+<li>EJ511 (eEver Tech, USB Controller, Keil C51):<br>修改韌體支援MJPG/YUY2各種解析度組合,修改I2C控制外部裝置流程和客製化設定</li>
 <li>PR2000 (Pixelplus, Analog HD Video Decoder, MDK-ARM):<br>修改STM32F103韌體流程加入AVS7610控制, 加入I2C Slave功能, 電腦可透過UART/I2C介面調整AVS7610 </li>
 <li>KL520/KL720  (Kneron, AI Chip, ARM Cortex-M4, CMSIS RTOS, MDK-ARM):<br>修改KL520韌體Host Mode支援MIPI DPI, 修改Flash讀寫API, 加入一些客製化功能, 修改KL720韌體HICO Mode支援MIPI DPI和Host Mode, 配合Kneron Plus軟體加入一些測試功能    </li>
 </ul>
