--- a/resume/index.html
+++ b/resume/index.html
@@ -1260,7 +1260,7 @@ pre[class*="language-"] {
 <h2 class="setext" id="experience">Experience</h2>
 <p>2022/04 - Present 奇景光電 (Himax Technologies, Inc), ASIC設計處, 系統應用工程師    </p>
 <blockquote>
-<p>Port Trusted Firmware-M, FatFs file system, RTX5 RTOS<br>Integrate SDK to CMSIS packs</p>
+<p>Port TF-M, FatFs file system, RTX5 RTOS<br>Integrate SDK to CMSIS packs</p>
 </blockquote>
 <ul>
 <li>IC Utils <ul>
