--- a/resume/index.html
+++ b/resume/index.html
@@ -1249,7 +1249,6 @@ pre[class*="language-"] {
 <h2 class="setext" id="about">About</h2>
 <ul>
 <li>System Engineer</li>
-<li>Board Bring Up</li>
 <li>Firmware and Software Development</li>
 </ul>
 <h2 class="setext" id="education">Education</h2>
@@ -1260,7 +1259,7 @@ pre[class*="language-"] {
 <h2 class="setext" id="experience">Experience</h2>
 <p>2022/04 - Present 奇景光電 (Himax Technologies, Inc), ASIC設計處, 系統應用工程師    </p>
 <blockquote>
-<p>Port TF-M, FatFs file system, RTX5 RTOS<br>Integrate SDK to CMSIS packs</p>
+<p>Port TF-M, FatFs, RTX5<br>Integrate SDK to CMSIS packs</p>
 </blockquote>
 <ul>
 <li>IC Utils <ul>
@@ -1397,7 +1396,7 @@ pre[class*="language-"] {
 <h2 class="setext" id="skills-and-tool">Skills and Tool</h2>
 <ul>
 <li>C, C# .NET, Python, QT, Matlab, STM32Cube, GNU Make, RTL Verilog    </li>
-<li>Keil MDK-ARM/C51, Microsoft Visual Studio, Renesas CS+, Intel (Altera) Quartus Prime    </li>
+<li>Keil MDK-ARM/C51, Visual Studio, Renesas CS+, Quartus Prime    </li>
 <li>Logic Analyzer, Oscilloscope, Vectorscope    </li>
 </ul>
 <h2 class="setext" id="ics">ICs</h2>
