--- a/resume/index.html
+++ b/resume/index.html
@@ -1388,10 +1388,9 @@ pre[class*="language-"] {
 <h2 class="setext" id="knowledge">Knowledge</h2>
 <ul>
 <li>Embedded System, RTOS </li>
-<li>I2C, SPI, UART, I2S</li>
-<li>USB Video/Audio/HID Class</li>
-<li>CMOS Sensor DVP, HD/SDTV Parallel Interface, CVBS, HDMI, ITU-R BT656/BT601/BT1120, EIA/CEA-861  </li>
-<li>Digital Camera Lens (Motor) Driver    </li>
+<li>I2C, SPI, UART, I2S, USB</li>
+<li>CMOS Sensor DVP, CVBS, HDMI, ITU-R BT656/BT601/BT1120, EIA/CEA-861  </li>
+<li>Camera Lens (Motor) Driver    </li>
 </ul>
 <h2 class="setext" id="skills-and-tool">Skills and Tool</h2>
 <ul>
@@ -1401,7 +1400,7 @@ pre[class*="language-"] {
 </ul>
 <h2 class="setext" id="ics">ICs</h2>
 <ul>
-<li>AVS7610, AVS7150 (義晶, Fisheye Correction)</li>
+<li>AVS7610, AVS7150 (Fisheye Correction)</li>
 <li>CYUSB3014, EJ511 (USB Controller)</li>
 <li>MDIN340/325A/270 (Video Display Processor)</li>
 <li>IT6801/6604/66121 (HDMI), TC358743XBG (HDMI Bridge to MIPI CS-2)  </li>
