--- a/resume/index.html
+++ b/resume/index.html
@@ -1389,8 +1389,8 @@ pre[class*="language-"] {
 <ul>
 <li>Embedded System, RTOS </li>
 <li>I2C, SPI, UART, I2S, USB</li>
-<li>CMOS Sensor DVP, CVBS, HDMI, ITU-R BT656/BT601/BT1120, EIA/CEA-861  </li>
-<li>Camera Lens (Motor) Driver    </li>
+<li>Sensor DVP, CVBS, HDMI, ITU-R BT656/BT601/BT1120, EIA/CEA-861  </li>
+<li>Lens Motor Driver    </li>
 </ul>
 <h2 class="setext" id="skills-and-tool">Skills and Tool</h2>
 <ul>
