--- a/resume/index.html
+++ b/resume/index.html
@@ -1273,6 +1273,10 @@ pre[class*="language-"] {
 <li>Erase, Dump, Auto Produce</li>
 </ul>
 </li>
+<li>USB DFU<ul>
+<li>Download, Upload, Detach</li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
@@ -1389,14 +1393,14 @@ pre[class*="language-"] {
 <ul>
 <li>Embedded System, RTOS </li>
 <li>I2C, SPI, UART, I2S, USB</li>
-<li>Sensor DVP, CVBS, HDMI, ITU-R BT656/BT601/BT1120, EIA/CEA-861  </li>
+<li>Sensor DVP, CVBS, HDMI, BT656/BT601/BT1120, CEA-861  </li>
 <li>Lens Motor Driver    </li>
 </ul>
 <h2 class="setext" id="skills-and-tool">Skills and Tool</h2>
 <ul>
 <li>C, C# .NET, Python, QT, Matlab, STM32Cube, GNU Make, RTL Verilog    </li>
 <li>Keil MDK-ARM/C51, Visual Studio, Renesas CS+, Quartus Prime    </li>
-<li>Logic Analyzer, Oscilloscope, Vectorscope    </li>
+<li>Logic Analyzer, Oscilloscope, Vectorscope   </li>
 </ul>
 
 </article>
