--- a/resume/index.html
+++ b/resume/index.html
@@ -1245,7 +1245,7 @@ pre[class*="language-"] {
   <article class="markdown-body"><h1 class="setext" id="沈玴興-yixing-shen">沈玴興 (Yixing Shen)</h1>
 <p><a href="https://yixingshen.github.io">https://yixingshen.github.io</a> </p>
 <h2 class="setext" id="contact">Contact</h2>
-<p>Email: <a href="mailto:kkman3651878@hotmail.com">kkman3651878@hotmail.com</a><br>LINE ID: yixingshen<br>Skype: kkman3651878    </p>
+<p>Email: <a href="mailto:kkman3651878@hotmail.com">kkman3651878@hotmail.com</a><br>LINE ID: yixingshen<br>WeChat: yixingshen_tw<br>Microsoft Teams: kkman3651878    </p>
 <h2 class="setext" id="about">About</h2>
 <ul>
 <li>System Engineer</li>
@@ -1275,6 +1275,11 @@ pre[class*="language-"] {
 </li>
 <li>USB DFU<ul>
 <li>Download, Upload, Detach</li>
+</ul>
+</li>
+<li>USB Camera<ul>
+<li>DirectShow Capture uncompressed andmjpeg streams or still mages</li>
+<li>Extension Unit commands </li>
 </ul>
 </li>
 </ul>
