--- a/resume/index.html
+++ b/resume/index.html
@@ -1278,8 +1278,8 @@ pre[class*="language-"] {
 </ul>
 </li>
 <li>USB Camera<ul>
-<li>DirectShow Capture uncompressed andmjpeg streams or still mages</li>
-<li>Extension Unit commands </li>
+<li>DirectShow Capture uncompressed and mjpeg streams or still mages</li>
+<li>UVC Extension Unit commands </li>
 </ul>
 </li>
 </ul>
