--- a/resume/index.html
+++ b/resume/index.html
@@ -1278,7 +1278,7 @@ pre[class*="language-"] {
 </ul>
 </li>
 <li>USB Camera<ul>
-<li>DirectShow Capture uncompressed and mjpeg streams or still mages</li>
+<li>DirectShow Capture uncompressed and mjpeg streams or still images</li>
 <li>UVC Extension Unit commands </li>
 </ul>
 </li>
