--- a/resume/index.html
+++ b/resume/index.html
@@ -1245,7 +1245,7 @@ pre[class*="language-"] {
   <article class="markdown-body"><h1 class="setext" id="沈玴興-yixing-shen">沈玴興 (Yixing Shen)</h1>
 <p><a href="https://yixingshen.github.io">https://yixingshen.github.io</a> </p>
 <h2 class="setext" id="contact">Contact</h2>
-<p>Email: <a href="mailto:kkman3651878@hotmail.com">kkman3651878@hotmail.com</a><br>LINE ID: yixingshen<br>WeChat: yixingshen_tw<br>Microsoft Teams: kkman3651878    </p>
+<p>Email: <a href="mailto:kkman3651878@hotmail.com">kkman3651878@hotmail.com</a><br>LINE ID: yixingshen<br>WeChat: yixingshen_tw<br>Teams: kkman3651878    </p>
 <h2 class="setext" id="about">About</h2>
 <ul>
 <li>System Engineer</li>
@@ -1259,7 +1259,7 @@ pre[class*="language-"] {
 <h2 class="setext" id="experience">Experience</h2>
 <p>2022/04 - Present 奇景光電 (Himax Technologies, Inc), ASIC設計處, 系統應用工程師    </p>
 <blockquote>
-<p>Port TF-M, FatFs, RTX5, TinyUSB<br>Integrate SDK to CMSIS packs</p>
+<p>Port TF-M, FatFs, RTX5, TinyUSB, UF2<br>Integrate SDK to CMSIS packs</p>
 </blockquote>
 <ul>
 <li>IC Utils <ul>
