--- a/resume/index.html
+++ b/resume/index.html
@@ -1309,8 +1309,8 @@ pre[class*="language-"] {
 <li>VIP, ISP, NR, SCLDN, Frame Buffer, SCLUP, DISP, TVEN</li>
 </ul>
 </li>
-<li>RAW (CFA)/RGB/YCBCR Image Converter    <ul>
-<li>RAW Bayer (CFA)</li>
+<li>RAW/RGB/YCBCR Image Converter    <ul>
+<li>RAW Bayer</li>
 <li>YCBCR444/422/420 Packed</li>
 <li>YCBCR444/422/420 Planar</li>
 <li>YCBCR422/420 Semi Planar</li>
@@ -1407,7 +1407,6 @@ pre[class*="language-"] {
 <li>Keil MDK-ARM/C51, Visual Studio, Renesas CS+, Quartus Prime    </li>
 <li>Logic Analyzer, Oscilloscope, Vectorscope   </li>
 </ul>
-
 </article>
 </body>
 </html>
