--- a/index.html
+++ b/index.html
@@ -1239,122 +1239,11 @@ pre[class*="language-"] {
   border-bottom: 2px dotted black;
 }
 </style>
-  <style>.markdown-body{}pre.front-matter{display:none!important;}/** Academic **/
-
-/* DejaVu Serif should use 11pt */
-.hf-container,
-.markdown-body {
-  font-family: Georgia,Palatino,"Palatino Linotype","Times New Roman","DejaVu Serif",serif,"Apple Color Emoji","Segoe UI Emoji";
-  font-size: 12pt;
-  line-height: 1.3;
-  color: #212121;
-}
-
-:root {
-  --footerHeaderBorderColor: #1c1c1c;
-}
-.hf-container {
-  font-size: 0.75em;
-}
-.page-header:not(.simple) .hf-container {
-  padding-bottom: 2px;
-  border-bottom: 1px solid var(--footerHeaderBorderColor);
-}
-.page-footer:not(.simple) .hf-container {
-  padding-top: 2px;
-  border-top: 1px solid var(--footerHeaderBorderColor);
-}
-
-.footnotes {
-  font-size: 0.75em;
-  opacity: 0.9;
-}
-.footnotes > hr:first-of-type {
-  width: 250px;
-  height: 1px;
-  background: var(--footerHeaderBorderColor);
-}
-.footnotes > ol > li > p {
-  margin-top: 4px;
-  margin-bottom: 4px;
-}
-
-.markdown-body h1,
-.markdown-body h2,
-.markdown-body h3,
-.markdown-body h4,
-.markdown-body h5,
-.markdown-body h6 {
-  font-weight: 600;
-  color: #282828;
-}
-
-.markdown-body h1 {
-  font-size: 1.8em;
-}
-.markdown-body h2 {
-  font-size: 1.6em;
-}
-.markdown-body h3 {
-  font-size: 1.4em;
-}
-.markdown-body h4,
-.markdown-body h5 {
-  font-size: 1.2em;
-}
-.markdown-body h6 {
-  font-size: 1em;
-}
-
-.markdown-body h1,
-.markdown-body h2 {
-  border-bottom: none;
-  padding-bottom: 0;
-}
-
-.markdown-body a {
-  color: #212121;
-  text-decoration: underline;
-}
-
-.markdown-body hr {
-  background-color: #b0b0b0;
-  height: 1px;
-}
-
-.markdown-body blockquote {
-  border: none;
-  color: #282828;
-  padding: 0 1em;
-  margin-left: 20px;
-}
-
-.markdown-body .highlight pre,
-.markdown-body pre {
-  background-color: #f6f8fa;
-  border: 1px solid #e5e5e5;
-  border-radius: 0;
-}
-
-.markdown-body table td,
-.markdown-body table th {
-  border: 1px solid #1a1a1a;
-  padding: 2px 6px;
-}
-.markdown-body table tr {
-  background: none;
-  border-top: 1px solid #1a1a1a;
-  text-align: left;
-}
-.markdown-body table tr:nth-child(2n) {
-  background: none;
-}
-</style>
+  <style>.markdown-body{}pre.front-matter{display:none!important;}</style>
 </head>
 <body>
   <article class="markdown-body"><h1 class="setext" id="notes-workspace">Notes Workspace</h1>
-<p><a href="https://yixingshen.github.io//resume">Resume</a></p>
-<p><a href="https://scholar.google.com/citations?user=0Qv5ftMAAAAJ&amp;hl=zh-TW&amp;oi=ao">google scholar</a></p>
+<p><a href="https://yixingshen.github.io//resume">Resume</a><br><a href="https://scholar.google.com/citations?user=0Qv5ftMAAAAJ&amp;hl=zh-TW&amp;oi=ao">Scholar</a>    </p>
 </article>
 </body>
 </html>
