--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@ pre[class*="language-"] {
 </head>
 <body>
   <article class="markdown-body"><h1 class="setext" id="notes-workspace">Notes Workspace</h1>
-<p><a href="https://yixingshen.github.io//resume">Resume</a><br><a href="https://scholar.google.com/citations?user=0Qv5ftMAAAAJ&amp;hl=zh-TW&amp;oi=ao">Scholar</a>    </p>
+<p><a href="https://yixingshen.github.io//resume">Resume</a><br><a href="https://scholar.google.com/citations?user=0Qv5ftMAAAAJ&amp;hl=zh-TW&amp;oi=ao">Citations</a>    </p>
 </article>
 </body>
 </html>
