--- a/resume/index.html
+++ b/resume/index.html
@@ -1391,7 +1391,7 @@ pre[class*="language-"] {
 </ul>
 </li>
 <li>碩士論文<br><a href="https://doi.org/10.6840/cycu201000431">"電力品質問題之特徵選取與分類," 中原大學電機工程研究所, 2010.</a></li>
-<li>期刊論文<br>[1] C.-Y. Lee and <strong>Y.-X. Shen</strong>, <a href="https://doi.org/10.1109/TPWRD.2011.2149547">“Optimal Feature Selection for Power-Quality Disturbances Classification,” IEEE Transactions on Power Delivery, Vol. 26, No. 4, pp. 2342-2351, Oct. 2011.</a> (SCI; ISSN:0885-8977)<br>[2] C.-Y. Lee, P.-H. Chen and <strong>Y.-X. Shen</strong>, <a href="https://doi.org/10.1016/j.eswa.2011.02.054">“Maximum Power Point Tracking (MPPT) System of Small Wind Power Generator Using RBFNN Approach,” Expert Systems with Applications, Vol. 38, No. 10, pp. 12058-12065, Sept. 2011.</a> (SCI; ISSN:0957-4174)    </li>
+<li><a href="https://scholar.google.com/citations?user=0Qv5ftMAAAAJ&amp;hl=zh-TW&amp;oi=ao">期刊論文</a><br>[1] C.-Y. Lee and <strong>Y.-X. Shen</strong>, <a href="https://doi.org/10.1109/TPWRD.2011.2149547">“Optimal Feature Selection for Power-Quality Disturbances Classification,” IEEE Transactions on Power Delivery, Vol. 26, No. 4, pp. 2342-2351, Oct. 2011.</a> (SCI; ISSN:0885-8977)<br>[2] C.-Y. Lee, P.-H. Chen and <strong>Y.-X. Shen</strong>, <a href="https://doi.org/10.1016/j.eswa.2011.02.054">“Maximum Power Point Tracking (MPPT) System of Small Wind Power Generator Using RBFNN Approach,” Expert Systems with Applications, Vol. 38, No. 10, pp. 12058-12065, Sept. 2011.</a> (SCI; ISSN:0957-4174)    </li>
 </ul>
 <h2 class="setext" id="knowledge">Knowledge</h2>
 <ul>
